<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasketBoardApp</string>
    <string name="author">By Pere</string>
    <string name="action_settings">Settings</string>

    <string name="action_change_style">Cambiar estilo</string>
    <string name="action_change_background">Cambiar fondo de pantalla</string>
    <string name="action_paint">Dibujar</string>
    <string name="action_eliminar">Elilminar</string>
    <string name="action_limpiar">Limpiar</string>
    
    <string name="titulo_dialogo_estilos">Configuración rotulador</string>
    <string name="titulo_dialogo_backgroud">Configuración fondo de pantalla</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>
    
    <string name="text_color">Color</string>
    <string name="text_grosor">Grosor</string>
    
</resources>