<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pbs.basketboardapp.MainActivity" >
    
    <item
        android:id="@+id/action_change_background"
		android:icon="@drawable/ic_backgroud"
        android:title="@string/action_change_background"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_change_style"
		android:icon="@drawable/ic_style"
        android:title="@string/action_change_style"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_paint"
        android:icon="@drawable/ic_dibujar2"
        android:title="@string/action_paint"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_eliminar2"
        android:title="@string/action_eliminar"
        android:showAsAction="ifRoom"
        />
    
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_limpiar2"
        android:title="@string/action_limpiar"
        android:showAsAction="ifRoom"
        />
</menu>